Bug 1647774 - Fix a clang-11 error about FNCMapEntry in gfxFT2FontList.cpp r=jfkthame

clang-11 is unhappy about this typedef being anonymous when it's not C-compatible due to the base class. This could be fixed by adding a tag, but looking around at other subclasses of `PLDHashEntryHdr`, most instances just define the struct in the C++ way.

Differential Revision: https://phabricator.services.mozilla.com/D80681